# orbit-eth-global

./: DEPLOYMENT.md  ESCROW_GUIDE.md  FEATURES.md  GAMES_COMPLETE.md  GAME_ISSUES.md  HACKATHON_INTEGRATION_PLAN.md  HACKATHON_READY.md  IMPROVEMENTS_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  SETUP_INSTRUCTIONS.md  SETUP_SUPABASE.md  START_HERE.md  SUPABASE_SETUP_INSTRUCTIONS.md  TABLE_TENNIS_AND_TENNIS.md  THREE_JS_TABLE_TENNIS.md  UPDATE_SUMMARY.md  WHATS_NEW.md  YELLOW_NETWORK_INTEGRATION.md  package-lock.json  package.json  server.js  supabase-schema-fixed.sql  supabase-schema.sql
agents/: orbit_referee.py
anchor-escrow/: Anchor.toml
anchor-escrow/programs/game-escrow/: Cargo.toml
anchor-escrow/programs/game-escrow/src/: lib.rs
app/: layout.tsx  page.tsx
app/auth/: page.tsx
app/game/: page.tsx
app/lobby/: page.tsx
components/: ChatBox.tsx  GameUI.tsx  HandRaiseGame.tsx  MouseMoveEffect.tsx  ObjectBringGame.tsx  PushupBattleGame.tsx  ReflexGame.tsx  RockPaperScissorsGame.tsx  TableTennisGame.tsx  TableTennisGame_BACKUP.tsx  TennisGame.tsx  VideoChat.tsx  WalletButton.tsx  WalletProvider.tsx
contracts/: game-escrow.rs  hardhat.config.js  package-lock.json  package.json
contracts/cache/: solidity-files-cache.json
contracts/contracts/: GameEscrow.sol  OrbitWinnerNFT.sol
contracts/deployments/: baseSepolia.json
contracts/scripts/: deploy.js  mint-demo-nft.js  test-complete-game-flow.js  test-direct-nft.js  (+2 more)
lib/: blockscout.ts  gameContract.ts  store.ts  supabase.ts  wager.ts  yellowNetwork.ts
types/: simple-peer.d.ts
(+6 files in other folders)
