[package]
name = "game-escrow"
version = "0.1.0"
description = "SkillDuels game escrow smart contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "game_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"

